# datapains-spark-k8s-exmaples

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
examples/: denormalize.py
tools/docker/: Dockerfile
tools/docker/scripts/: decom.sh  entrypoint.sh
