[tool.poetry]
name = "datapains-spark-k8s-examples"
version = "0.0.1"
description = "Repo for example spark on k8s workflows"
authors = ["Simon Thelin"]

[tool.poetry.dependencies]
python = "^3.9"
delta-spark = "4.0.0rc1"
pyspark = "4.0.0.dev1"
pandas = "2.2.2"
pyarrow = "16.1.0"
grpcio = "1.64.1"
google = "3.0.0"
google-api-core = "2.19.1"
grpcio-status = "1.64.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"
